fix minor bug: overflow tweet elements wraping now

--- a/public/styles/display-tweets.css
+++ b/public/styles/display-tweets.css
@@ -33,8 +33,7 @@ article.tweet >p{
   margin-left: 40px;
   font-weight: bold;
   font-size: 2rem;
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow-wrap: break-word;
 }
 article.tweet >footer{
   display: flex;
